--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.10",
+    "@apollo/experimental-nextjs-app-support": "^0.6.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
